--- a/manifest.json
+++ b/manifest.json
@@ -4,19 +4,13 @@
     "description": "حاسبة بسيطة لتقدير قيمة فاتورة الكهرباء الشهرية.",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "background_color": "#f5f5f5",
     "theme_color": "#1976D2",
     "icons": [
         {
-            "src": "icon.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icon.png",
-            "sizes": "512x512",
+            "src": "icon-1024.png",
+            "sizes": "1024x1024",
             "type": "image/png"
         }
     ]
-
 }
