--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "حاسبة بسيطة لتقدير قيمة فاتورة الكهرباء الشهرية.",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#f5f5f5",
+    "background_color": "#ffffff",
     "theme_color": "#1976D2",
     "icons": [
         {
@@ -14,3 +14,4 @@
         }
     ]
 }
+
