--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,7 @@
         {
             "src": "icon-192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/png"
         },
         {
             "src": "icon-512.png",
