--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "حاسبة فاتورة الكهرباء",
-    "short_name": "فاتورة الكهرباء",
+    "short_name": "حاسبة الكهرباء",
     "description": "حاسبة بسيطة لتقدير قيمة فاتورة الكهرباء الشهرية.",
     "start_url": ".",
     "display": "standalone",
