--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#1976D2",
+    "theme_color": "#2563eb",
     "icons": [
         {
             "src": "icon-1024.png",
