--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,32 @@
 {
     "name": "حاسبة فاتورة الكهرباء",
     "short_name": "حاسبة الكهرباء",
-    "description": "حاسبة بسيطة لتقدير قيمة فاتورة الكهرباء الشهرية.",
-    "start_url": ".",
+    "description": "حاسبة بسيطة لتقدير قيمة فاتورة الكهرباء الشهرية في الأردن.",
+    "id": "/electric-bill-calculator/",
+    "start_url": "./index.html",
+    "scope": ".",
     "display": "standalone",
-    "background_color": "#FFFFFF",
+    "background_color": "#ffffff",
     "theme_color": "#2563eb",
+    "orientation": "portrait",
     "icons": [
         {
             "src": "icon-1024.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "icon-1024.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "icon-1024.png",
             "sizes": "1024x1024",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any"
         }
     ]
 }
